AWS/cloudformation.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Setup for AgileTrack Application

Parameters:
  VpcCidrBlock:
    Description: CIDR block for the VPC
    Type: String
    Default: "10.0.0.0/16"

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.1.0/24"
      AvailabilityZone: !Select [0, !GetAZs ""]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "public1"

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.2.0/24"
      AvailabilityZone: !Select [1, !GetAZs ""]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "public2"

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.3.0/24"
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: Name
          Value: "private1"

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.4.0/24"
      AvailabilityZone: !Select [1, !GetAZs ""]
      Tags:
        - Key: Name
          Value: "private2"

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway

  DevRouteAssos:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  MySQLDB:
    Type: AWS::RDS::DBInstance
    Properties:
      DBName: "agiletrackdb"
      DBInstanceIdentifier: "agiletrackdb"
      Engine: "mysql"
      EngineVersion: "8.0" 
      DBInstanceClass: "db.t3.micro"
      AllocatedStorage: "20"
      MasterUsername: "admin"
      MasterUserPassword: "password"
      DBSubnetGroupName: !Ref DBSubnetGroup
      VPCSecurityGroups:
        - !Ref PrivateSecurityGroup

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: "Subnet group for AgileTrack MySQL DB"
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

  AgileTrackFrontendInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: "t2.medium" 
      ImageId: "ami-06f8dce63a6b60467"
      KeyName: "vockey"
      NetworkInterfaces:
        - AssociatePublicIpAddress: 'true'
          DeleteOnTermination: 'true'
          DeviceIndex: '0'
          GroupSet:
            - !Ref PublicSecurityGroup
          SubnetId: !Ref PublicSubnet1
          
      Tags:
        - Key: Name
          Value: "frontend"

  AgileTrackBackendInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: "t2.medium"  
      ImageId: "ami-06f8dce63a6b60467"
      KeyName: "vockey"
      NetworkInterfaces:
        - AssociatePublicIpAddress: 'true'
          DeleteOnTermination: 'true'
          DeviceIndex: '0'
          GroupSet:
            - !Ref PublicSecurityGroup
          SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: "backend"

  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for public instances"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: "0.0.0.0/0"

  PrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for private instances"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref PublicSecurityGroup

  SecretManagerSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: "AgileTrackSecret"
      Description: "Secret for AgileTrack Application"
      SecretString: '{"DBUSERNAME": "admin", "PASSWORD": "password", "PORT": "3306", "DATABASE": "agiletrackdb", "HOST": { "Fn::GetAtt": ["MySQLDB", "Endpoint.Address"] }, "SECRET_KEY": "thisisasecretkeyforcloudproject@2024", "EMAIL": "agiletrack.service@gmail.com", "EMAIL_PASSWORD": "dtzw tuaq ejtm qkqd"}'
  
  LambdaFunction:
    Type: AWS::Lambda::Function
    Properties:
      Handler: lambda_function.lambda_handler
      Role: arn:aws:iam::730335289956:role/LabRole
      FunctionName: "agileTrackLambda"
      Code:
        S3Bucket: "agiletrack-bucket"
        S3Key: "lambda_function.zip"
      Runtime: python3.8

  CPUAlarmTopic:
    Type: AWS::SNS::Topic
    Properties:
      DisplayName: "CPUAlarmTopic"
      Subscription:
        - Endpoint: "hiteshgupta2198@gmail.com"
          Protocol: "email"

  CPUUtilizationAlarmFrontend:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: "Alarm for CPU Utilization exceeding 50% - Frontend"
      Namespace: "AWS/EC2"
      MetricName: "CPUUtilization"
      Dimensions:
        - Name: "InstanceId"
          Value: !Ref AgileTrackFrontendInstance
      Statistic: "Average"
      Period: "300"
      EvaluationPeriods: "1"
      Threshold: "50"
      ComparisonOperator: "GreaterThanThreshold"
      AlarmActions:
        - !Ref CPUAlarmTopic

  CPUUtilizationAlarmBackend:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: "Alarm for CPU Utilization exceeding 50% - Backend"
      Namespace: "AWS/EC2"
      MetricName: "CPUUtilization"
      Dimensions:
        - Name: "InstanceId"
          Value: !Ref AgileTrackBackendInstance
      Statistic: "Average"
      Period: "300"
      EvaluationPeriods: "1"
      Threshold: "50"
      ComparisonOperator: "GreaterThanThreshold"
      AlarmActions:
        - !Ref CPUAlarmTopic
